tests/diagnostics/cases/types/01_let_type_mismatch_string.home
// Type mismatch: i32 binding initialized with a string literal.
fn main() {
    let x: i32 = "hello"
}
